# OOPLabs

./: .gitignore  README.md
Lab1/: CMakeLists.txt
Lab1/include/: fear_checker.h
Lab1/src/: fear_checker.cpp  main.cpp
Lab1/tests/: test_fear_checker.cpp
Lab2/: CMakeLists.txt
Lab2/include/: Array.h  Seven.h
Lab2/src/: Array.cpp  Seven.cpp
Lab2/tests/: test_seven.cpp
